# expense-tracker

./: .gitignore  main.py  pyproject.toml
src/: database.py  main.py  models.py  ui.py  visualization.py
src/configs/: db_config.yaml
src/styles/: styles.qss
